Use policy change date file

--- a/prognosis/Try_SEIR.ipynb
+++ b/prognosis/Try_SEIR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,370 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy = pd.read_csv('data/lockdown_date_country.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_policy = pd.read_csv('data/lockdown_date_state_US.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>lockdown_date</th>\n",
+       "      <th>Note</th>\n",
+       "      <th>relax_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>2020/03/16</td>\n",
+       "      <td>Stay at home order</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2020/04/04</td>\n",
+       "      <td>Stay at home order</td>\n",
+       "      <td>2020/05/11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2020/03/28</td>\n",
+       "      <td>Stay at home order</td>\n",
+       "      <td>2020/05/22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>2020/03/30</td>\n",
+       "      <td>Stay at home order</td>\n",
+       "      <td>2020/05/16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>2020/03/27</td>\n",
+       "      <td>Essential business closed</td>\n",
+       "      <td>2020/05/18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country        state lockdown_date                       Note  relax_date\n",
+       "0      US  Puerto Rico    2020/03/16         Stay at home order         NaN\n",
+       "1      US      Alabama    2020/04/04         Stay at home order  2020/05/11\n",
+       "2      US       Alaska    2020/03/28         Stay at home order  2020/05/22\n",
+       "3      US      Arizona    2020/03/30         Stay at home order  2020/05/16\n",
+       "4      US     Arkansas    2020/03/27  Essential business closed  2020/05/18"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_policy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(policy)):\n",
+    "    if isinstance(policy.iloc[i].relax_date, str):\n",
+    "        country[policy.iloc[i].country] = [policy.iloc[i].lockdown_date, policy.iloc[i].relax_date]\n",
+    "    else:\n",
+    "        country[policy.iloc[i].country] = [policy.iloc[i].lockdown_date,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(state_policy)):\n",
+    "    if isinstance(state_policy.iloc[i].relax_date, str):\n",
+    "        state[state_policy.iloc[i].state] = [state_policy.iloc[i].lockdown_date, state_policy.iloc[i].relax_date]\n",
+    "    else:\n",
+    "        state[state_policy.iloc[i].state] = [state_policy.iloc[i].lockdown_date,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Puerto Rico': ['2020/03/16'],\n",
+       " 'Alabama': ['2020/04/04', '2020/05/11'],\n",
+       " 'Alaska': ['2020/03/28', '2020/05/22'],\n",
+       " 'Arizona': ['2020/03/30', '2020/05/16'],\n",
+       " 'Arkansas': ['2020/03/27', '2020/05/18'],\n",
+       " 'California': ['2020/03/19', '2020/06/12'],\n",
+       " 'Colorado': ['2020/03/26', '2020/04/26'],\n",
+       " 'Connecticut': ['2020/03/23', '2020/06/16'],\n",
+       " 'Delaware': ['2020/03/24', '2020/06/01'],\n",
+       " 'District of Columbia': ['2020/03/30', '2020/05/29'],\n",
+       " 'Florida': ['2020/04/03', '2020/05/18'],\n",
+       " 'Georgia': ['2020/04/03', '2020/04/30'],\n",
+       " 'Hawaii': ['2020/03/25', '2020/05/07'],\n",
+       " 'Idaho': ['2020/03/25', '2020/06/11'],\n",
+       " 'Illinois': ['2020/03/21', '2020/05/01'],\n",
+       " 'Indiana': ['2020/03/25', '2020/05/01'],\n",
+       " 'Iowa': ['2020/04/04', '2020/05/01'],\n",
+       " 'Kansas': ['2020/03/30', '2020/05/04'],\n",
+       " 'Kentucky': ['2020/03/26', '2020/05/22'],\n",
+       " 'Louisiana': ['2020/03/23', '2020/05/15'],\n",
+       " 'Maine': ['2020/04/02', '2020/04/30'],\n",
+       " 'Maryland': ['2020/03/30', '2020/05/15'],\n",
+       " 'Massachusetts': ['2020/03/31', '2020/06/08'],\n",
+       " 'Michigan': ['2020/03/24', '2020/06/01'],\n",
+       " 'Minnesota': ['2020/03/27', '2020/05/04'],\n",
+       " 'Mississippi': ['2020/04/03', '2020/05/12'],\n",
+       " 'Missouri': ['2020/04/06', '2020/05/04'],\n",
+       " 'Montana': ['2020/03/26', '2020/04/26'],\n",
+       " 'Nevada': ['2020/04/01', '2020/05/29'],\n",
+       " 'New Hampshire': ['2020/03/27', '2020/06/16'],\n",
+       " 'New Jersey': ['2020/03/21', '2020/06/09'],\n",
+       " 'New Mexico': ['2020/03/24', '2020/05/15'],\n",
+       " 'New York': ['2020/03/22', '2020/06/08'],\n",
+       " 'North Carolina': ['2020/03/30'],\n",
+       " 'Ohio': ['2020/03/23', '2020/04/04'],\n",
+       " 'Oklahoma': ['2020/03/31', '2020/05/30'],\n",
+       " 'Oregon': ['2020/03/23', '2020/05/15'],\n",
+       " 'Pennsylvania': ['2020/04/01'],\n",
+       " 'Rhode Island': ['2020/03/28'],\n",
+       " 'South Carolina': ['2020/04/07', '2020/05/04'],\n",
+       " 'Tennessee': ['2020/04/02', '2020/04/30'],\n",
+       " 'Texas': ['2020/04/02', '2020/06/03'],\n",
+       " 'Vermont': ['2020/03/24'],\n",
+       " 'Virginia': ['2020/03/30', '2020/05/26'],\n",
+       " 'Washington': ['2020/03/23', '2020/05/18'],\n",
+       " 'West Virginia': ['2020/03/25', '2020/05/04'],\n",
+       " 'Wisconsin': ['2020/03/25', '2020/04/30'],\n",
+       " 'Wyoming': ['2020/04/03', '2020/05/15']}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(state, open('data/lockdown_date_state_US.json', 'w'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(country, open('data/lockdown_date_country.json', 'w'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_country = json.load(open('data/lockdown_date_country.json', 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_state = json.load(open('data/lockdown_date_state_US.json', 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020/04/04', '2020/05/11']"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_state['Alabama']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020/04/04', '2020/05/11']"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_state.get('Alabama')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2020/06/01'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_country['Albania'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> c:\\users\\quoc\\anaconda3\\envs\\st65\\lib\\json\\__init__.py(180)dump()\n",
+      "-> fp.write(chunk)\n",
+      "(Pdb) p chunk\n",
+      "'{'\n",
+      "(Pdb) a\n",
+      "obj = {'Afghanistan': ['2020/03/27', '2020/05/10'], 'Albania': ['2020/03/13', '2020/06/01'], 'Argentina': ['2020/03/20', '2020/05/10'], 'Armenia': ['2020/03/24', '2020/05/04'], 'Algeria': ['2020/03/20', '2020/04/15'], 'Australia': ['2020/03/23'], 'Austria': ['2020/03/16', '2020/04/13'], 'Azerbaijan': ['2020/03/31', '2020/04/20'], 'Bangladesh': ['2020/03/31', '2020/05/16'], 'Barbados': ['2020/03/28', '2020/05/03'], 'Belgium': ['2020/03/22', '2020/05/04'], 'Bolivia': ['2020/03/22', '2020/04/15'], 'Brazil': ['2020/03/24', '2020/04/30'], 'Bulgaria': ['2020/03/15', '2020/04/17'], 'Canada': ['2020/03/23', '2020/04/15'], 'Chile': ['2020/03/19', '2020/04/18'], 'China': ['2020/01/23'], 'Colombia': ['2020/03/25', '2020/06/30'], 'Costa Rica': ['2020/03/23'], 'Croatia': ['2020/03/17'], 'Cuba': ['2020/03/23'], 'Cyprus': ['2020/03/24'], 'Czechia': ['2020/03/16'], 'Denmark': ['2020/03/16'], 'Dominican Republic': ['2020/03/19'], 'Ecuador': ['2020/03/24', '2020/04/21'], 'Egypt': ['2020/03/21'], 'El Salvador': ['2020/03/12', '2020/04/02'], 'Estonia': ['2020/03/27'], 'Finland': ['2020/03/16', '2020/04/15'], 'France': ['2020/03/16', '2020/05/11'], 'Georgia': ['2020/03/31', '2020/04/21'], 'Germany': ['2020/03/16', '2020/05/10'], 'Ghana': ['2020/03/30', '2020/04/12'], 'Greece': ['2020/03/23', '2020/05/04'], 'Honduras': ['2020/03/27', '2020/05/17'], 'Hungary': ['2020/03/28', '2020/04/10'], 'India': ['2020/03/24', '2020/06/30'], 'Iran': ['2020/02/27', '2020/04/20'], 'Iraq': ['2020/03/22', '2020/04/11'], 'Ireland': ['2020/03/27', '2020/05/05'], 'Israel': ['2020/03/30'], 'Italy': ['2020/02/29', '2020/05/18'], 'Japan': ['2020/04/15'], 'Jordan': ['2020/03/18', '2020/04/30'], 'Kuwait': ['2020/03/14', '2020/03/29'], 'Latvia': ['2020/03/12'], 'Lebanon': ['2020/03/11', '2020/04/10'], 'Lithuania': ['2020/03/17', '2020/04/27'], 'Luxembourg': ['2020/03/21'], 'Malaysia': ['2020/03/16', '2020/06/09'], 'Malta': ['2020/03/13'], 'Mexico': ['2020/03/23', '2020/06/01'], 'Morocco': ['2020/03/19', '2020/06/10'], 'Nepal': ['2020/03/24', '2020/06/14'], 'Netherlands': ['2020/03/15'], 'New Zealand': ['2020/03/26', '2020/05/14'], 'Nigeria': ['2020/03/30', '2020/04/12'], 'Norway': ['2020/03/24'], 'Pakistan': ['2020/03/24', '2020/05/09'], 'Panama': ['2020/03/25'], 'Paraguay': ['2020/03/20', '2020/05/03'], 'Peru': ['2020/03/16', '2020/06/30'], 'Philippines': ['2020/03/27', '2020/05/15'], 'Portugal': ['2020/03/19', '2020/04/02'], 'Poland': ['2020/03/24'], 'Romania': ['2020/03/25', '2020/05/12'], 'Russia': ['2020/03/30', '2020/04/30'], 'Rwanda': ['2020/03/21', '2020/04/19'], 'San Marino': ['2020/03/14'], 'Saudi Arabia': ['2020/03/26'], 'Serbia': ['2020/03/15', '2020/05/04'], 'Singapore': ['2020/04/10', '2020/06/01'], 'Slovakia': ['2020/03/12'], 'Slovenia': ['2020/03/20'], 'South Africa': ['2020/03/26', '2020/04/30'], 'Spain': ['2020/03/05', '2020/05/09'], 'Sweden': ['2020/03/24'], 'Switzerland': ['2020/03/15'], 'Taiwan*': ['2020/03/11'], 'Thailand': ['2020/03/25', '2020/05/31'], 'Tunisia': ['2020/03/23', '2020/04/19'], 'Turkey': ['2020/03/18', '2020/04/27'], 'Ukraine': ['2020/03/17', '2020/04/24'], 'United Arab Emirates': ['2020/03/26', '2020/04/17'], 'United Kingdom': ['2020/03/13'], 'US': ['2020/03/17', '2020/06/15'], 'Venezuela': ['2020/03/17', '2020/05/13'], 'Vietnam': ['2020/07/28'], 'Zimbabwe': ['2020/03/20']}\n",
+      "fp = 'data/lockdown_date_country.json'\n",
+      "skipkeys = False\n",
+      "ensure_ascii = True\n",
+      "check_circular = True\n",
+      "allow_nan = True\n",
+      "cls = None\n",
+      "indent = None\n",
+      "separators = None\n",
+      "default = None\n",
+      "sort_keys = False\n",
+      "kw = {}\n",
+      "(Pdb) q\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pdb; pdb.pm()"
    ]
   },
   {
